--- a/AreaVentas/areaVentas.html
+++ b/AreaVentas/areaVentas.html
@@ -226,7 +226,7 @@
         <div class="col-md">
           <div class="button-container">
             <button class="btn btn btn-block" id="btn-cancelarventa">
-              Cancelar Venta<img src="cancelar.png" alt="img Cancelar Venta" />
+              Cancelar Venta<img src="Cancelar.png" alt="img Cancelar Venta" />
             </button>
           </div>
         </div>
