--- a/AreaVentas/areaVentas.html
+++ b/AreaVentas/areaVentas.html
@@ -21,7 +21,7 @@
         <div class="Cabecera">
           <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
             <div class="Titulo">
-              <h1>Registro de Ventas</h1>
+              <h1 "titulo-ventas">Registro de Ventas</h1>
             </div>
           </div>
           <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
