--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Iniciar sesión</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="/logoECODAR.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="banner">
