--- a/AreaVentas/areaVentas.html
+++ b/AreaVentas/areaVentas.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="../logoECODAR.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
 
   <body>
