--- a/MenuPrincipal/index.html
+++ b/MenuPrincipal/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Registro de Clientes</title>
     <link rel="icon" type="image/x-icon" href="../logoECODAR.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
